sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:10: error: not found: value getPlayer
    while(getPlayerColor(i,0)!=i && getPlayer(Color(i,1)!=i)) {
                                    ^SelectBaseball:10: error: object java.awt.Color is not a value
    while(getPlayerColor(i,0)!=i && getPlayer(Color(i,1)!=i)) {
                                              ^